--- a/indexpage.html
+++ b/indexpage.html
@@ -264,20 +264,78 @@
   </footer>
 
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyB_v8PrYl2_3mUETzk-JYTxm3-YdE5FzE4",
-      authDomain: "bingo-multiplayer-2b0de.firebaseapp.com",
-      projectId: "bingo-multiplayer-2b0de",
-      storageBucket: "bingo-multiplayer-2b0de.appspot.com",
-      messagingSenderId: "363457734024",
-      appId: "1:363457734024:web:56ddb17e0313fd8283463d"
-    };
+  const firebaseConfig = {
+    apiKey: "AIzaSyB_v8PrYl2_3mUETzk-JYTxm3-YdE5FzE4",
+    authDomain: "bingo-multiplayer-2b0de.firebaseapp.com",
+    projectId: "bingo-multiplayer-2b0de",
+    storageBucket: "bingo-multiplayer-2b0de.appspot.com",
+    messagingSenderId: "363457734024",
+    appId: "1:363457734024:web:56ddb17e0313fd8283463d"
+  };
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  // ✅ Prevent redirect loop inside Android WebView
+  function isAndroidApp() {
+    return (typeof AndroidInterface !== "undefined");
+  }
+
+  // Redirect if not logged in
+  onAuthStateChanged(auth, (user) => {
+    if (!user) {
+      if (!isAndroidApp()) {
+        // Browser → go back to login.html
+        window.location.href = "login.html";
+      }
+    } else {
+      let base = "";
+      if (user.email) base = user.email.split("@")[0].replace(/[^a-zA-Z]/g, "");
+      else if (user.isAnonymous) base = "Guest";
+      else if (user.displayName) base = user.displayName.replace(/\s+/g, "");
+      else base = "Player";
+
+      const num = user.uid.slice(0, 4);
+      myUniqueName = `${base}${num}`;
+
+      localStorage.setItem("bingoUniqueName", myUniqueName);
+
+      profileNameDisplay.textContent = myUniqueName;
+      profileEmailDisplay.textContent = user.email || "Anonymous";
+
+      const savedAvatar = localStorage.getItem("bingoAvatar");
+      profileAvatar.src = savedAvatar || user.photoURL || "https://cdn-icons-png.flaticon.com/512/3135/3135715.png";
+
+      fetch(`/balance?user=${encodeURIComponent(myUniqueName)}`)
+        .then(r => r.json())
+        .then(j => {
+          if (j && j.balance !== undefined) {
+            balance = parseFloat(j.balance);
+            updateBalanceUI();
+          }
+        })
+        .catch(()=>{});
+    }
+  });
+
+  // 🔑 Logout fix → ensures redirect only once
+  document.getElementById("logout").addEventListener("click", async (ev) => {
+    ev.preventDefault();
+    try { 
+      await signOut(auth); 
+      if (!isAndroidApp()) {
+        window.location.href = "login.html";
+      } else {
+        // In Android app, MainActivity will handle showing login.html
+        location.reload();
+      }
+    } catch (error) { 
+      alert("Logout failed: " + error.message); 
+    }
+  });
 
     // UI elements
     const menuBtn = document.getElementById("menuBtn");
@@ -512,3 +570,4 @@
   </script>
 </body>
 </html>
+
