--- a/login.html
+++ b/login.html
@@ -113,7 +113,7 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // ✅ Only auto-redirect in browser (NOT inside WebView)
+    // ✅ Only auto-redirect if NOT inside Android WebView
     onAuthStateChanged(auth, (user) => {
       if (user && !navigator.userAgent.includes("wv")) {
         window.location.href = "indexpage.html"; 
